add md5 and login(FindByNameAndPwd)
